--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "deploy-dev": "serverless deploy --stage dev",
     "deploy-prod": "serverless deploy --stage prod",
     "logs-verify": "serverless logs --function verify --stage dev",
-    "logs-wapuus": "serverless logs --function wapuus --stage dev"
+    "logs-Finns": "serverless logs --function Finns --stage dev"
   },
   "author": "",
   "license": "ISC",
